[package]
name = "ansi-to-tui"
version = "2.0.5"
authors = ["Uttarayan Mondal <email@uttarayan.me>"]
edition = "2018"
description = "A library to convert ansi color coded text into tui::text::Text type from tui-rs library"
keywords = ["ansi", "ascii", "tui", "parser"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uttarayan21/ansi-to-tui"
publish = false

[dependencies]
nom = "7.1.3"
simdutf8 = { version = "0.1.4", optional = true }
ratatui = { version = "0.*", git = "https://github.com/tui-rs-revival/ratatui.git", default-features = false }
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.71"

[features]
simd = ["simdutf8"]
